--- a/Syllabus/Syllabus.tex
+++ b/Syllabus/Syllabus.tex
@@ -276,7 +276,11 @@ Readings}\label{additional-required-readings}}
 \tightlist
 \item
   Primary texts and other required readings will be available
-  electronically on the Black Board course page and on Perusall.
+  electronically on the Blackboard course page and on Perusall. An
+  \colorbox{Goldenrod}{\bf{“E-Posting”}} notation is made next to each
+  of these readings in the syllabus. These readings will only be
+  available to students enrolled in the course, and are to be used only
+  for educational purposes.
 \end{itemize}
 
 \hypertarget{structure-and-character-of-a-chicoflex-course}{%
@@ -291,10 +295,9 @@ Course}\label{structure-and-character-of-a-chicoflex-course}}
   Blackboard Learn}. At Chico State, ``this class meets at set
   days/times in-person (requiring social distancing and face coverings)
   and is paired with another section taught simultaneously online by the
-  same instructor.''
-  \textcolor{cyan}{Days and times will use Pacific Standard Time (PST).}
-  This means that this class includes campus students who come to a
-  physical class, online students who show up ``live,'' and online
+  same instructor.'' \textbf{All times will use Pacific Standard Time
+  (PST).} This means that this class includes campus students who come
+  to a physical class, online students who show up ``live,'' and online
   students who watch the archived lectures. Therefore, it is the
   student's responsibility to check Blackboard Learn regularly and to
   check in with the professor or review the Syllabus re: any
@@ -355,17 +358,20 @@ Rights and Responsibilities, which can include suspension or expulsion
 from the California State University system.
 
 Individuals unable to wear a face covering due to a medical condition
-should contact the Accessibility Resource Center by phone at (530)
-898-5959 or by email at
+should contact the \href{https://www.csuchico.edu/arc/}{Accessibility
+Resource Center} by phone at 530-898-5959 or by email at
 \href{mailto:arcdept@csuchico.edu}{\nolinkurl{arcdept@csuchico.edu}}.
 
-COVID policy re: attendance: Attendance in this class is mandatory; if
-you do not attend class, you will not pass. If, however, you are a
-campus student attending physical class and you are symptomatic, please
-contact me (via email), do not attend the in-person class, and contact
-the COVID hotline at \textbf{530-898-2222} for additional direction.
-Also, make sure you keep me updated as you learn more about your health
-status.
+\hypertarget{covid-policy-re-attendance}{%
+\subsubsection{COVID policy re:
+attendance:}\label{covid-policy-re-attendance}}
+
+Attendance in this class is mandatory; if you do not attend class, you
+will not pass. If, however, you are a campus student attending physical
+class and you are symptomatic, please contact me (via email), do not
+attend the in-person class, and contact the COVID hotline at
+\textbf{(530)-898-2222} for additional direction. Also, make sure you
+keep me updated as you learn more about your health status.
 
 \hypertarget{attendance}{%
 \section{Attendance Policy}\label{attendance}}
@@ -375,11 +381,8 @@ mandatory in all sociology classes and is essential to your success in
 this course.} Only documented emergencies will constitute excused
 absences or assignments. Documentation will only be accepted within one
 week of your return to class. Please do not contact me about
-non-emergency absences. You are allowed up to three (3) unexcused
-absences and anything more than that will affect your final grade. If
-you expect to miss class because of a religious observance, you will
-need to notify me beforehand. Finally, if you miss class, it is your
-responsibility to catch up.
+non-emergency absences.
+\textcolor{red}{\bf{You are allowed up to three (3) unexcused absences and anything more than that will affect your final grade. If you expect to miss class because of a religious observance, you will need to notify me beforehand. Finally, if you miss class, it is your responsibility to catch up.}}
 
 \hypertarget{dropped-from-the-course}{%
 \subsection{Dropped From The Course}\label{dropped-from-the-course}}
@@ -395,16 +398,16 @@ they will receive a letter grade based on their performance.
 \begin{itemize}
 \item
   \textbf{No Show Drop:} You must complete a designated discussion post,
-  quiz, or practice activity by Tuesday of the first week of class or
-  you may be dropped as a no-show. Students who do not complete any work
-  in the first week will be dropped.
+  quiz, or practice activity by Thursday of the first week of class or
+  you may be dropped as a no-show. Students who do not complete
+  \textbf{any} work in the first two weeks will be dropped.
 \item
   \textbf{Excessive Absence Drop:} If more than two consecutive weeks of
   non-participation is observed by the instructor the student may be
-  dropped. If you do not participate in each week's discussion board and
-  complete at least one quiz or practice activity, you will be
-  considered ``non-participating'' and subject to being dropped from the
-  course.
+  dropped. If you do not participate in each week's participation
+  activities (in class, online, or Perusall) and complete at least one
+  quiz or practice activity, you will be considered
+  ``non-participating'' and subject to being dropped from the course.
 \end{itemize}
 
 \hypertarget{determination-of-final-grade}{%
@@ -479,8 +482,6 @@ one hour in class. This time outside of class will be spent on reading,
 assignments, and studying. This means you should plan on devoting six
 hours of outside time per week to this course.
 
-\newpage
-
 \hypertarget{attendance-and-class-participation-10-of-final-grade}{%
 \subsection{Attendance and Class Participation (10\% of Final
 Grade)}\label{attendance-and-class-participation-10-of-final-grade}}
@@ -513,19 +514,11 @@ read. You are expected to do this work on your own. Be prepared to offer
 your questions, insights, and critique either via communication with me,
 writing assignments and/or in conversation with other students.
 
-\emph{These are questions you should consider as you complete each
-reading:} What are the authors' main objectives/research questions? What
-methods, if any, did the author use to explore this question? What are
-the author's main conclusions? How do the readings build upon or
-challenge other works we have read thus far? Answering these questions
-on your own will better prepare you for quizzes, writing assignments,
-and the final project.
-
 \textbf{REMEMBER! Attendance is mandatory in all sociology classes (see
 \protect\hyperlink{attendance}{Attendance Policy section} above). It is
 also crucial to doing well in this class. In the context of this class,
 attendance means COMPLETING ALL OF THE ASSIGNMENTS, QUIZZES, INDIVIDUAL
-WORK, etc.} \emph{I usually have a very strict attendance policy.}
+WORK, etc.}
 
 \hypertarget{weekly-perusall-participation-10-of-final-grade}{%
 \subsection{Weekly Perusall Participation (10\% of Final
@@ -540,7 +533,7 @@ document and discussing it, Perusall brings discussion to text.
 To start, register for a free Perusall account and enter the course
 code: {[}Insert Code Here{]}
 
-At the beginning of the quarter, you will be assigned to groups in
+At the beginning of the semester, you will be assigned to groups in
 Perusall, each comprised of around 10-12 students. After week 2, you
 will be randomly placed into these groups and participate in
 asynchronous group reading and discussion, covering any major theme(s)s
@@ -551,11 +544,11 @@ more questions within your group that are related to that week's
 readings assignment(s) and lecture. Thus, you must interact in your
 group forum with at least two (2) of your groupmate's posts. Your
 contribution and annotations will be graded on a scale of 1 -- 3, with
-higher scores indicating higher quality annotations and responses. Your
-response to two or more groupmate's annotations and questions (due by
-8:00 PM (Pacific Standard Time) on Friday of that week).
-\textbf{Discussion posts and annotations will be given credit only if
-they are substantive and follow all instructions.}
+higher scores indicating higher quality annotations and responses.
+\textbf{Your annotations and responses to two or more groupmate's
+annotations and questions are due on Friday by 8:00 PM. Discussion posts
+and annotations will be given credit only if they are substantive and
+follow all instructions.}
 
 For reading assignments in Perusall, you will be evaluated based on the
 following four criteria:
@@ -567,8 +560,7 @@ following four criteria:
   Quality: The more thoughtful the responses, the higher the score.
 \item
   Quantity: Each student must submit at least seven (7) annotations in
-  each reading document. I will then compute overall grade based on
-  highest quality annotations.
+  each reading document.
 \item
   Timeliness: You must complete the reading assignment by Friday 11:30
   p.m.
@@ -592,19 +584,24 @@ part of the text.
 \subsection{Quizzes (20\% of Final Grade; 5\% each)}\label{quizzes}}
 
 Four quizzes are required in this class. The quizzes will cover
-theories, ideas, and concepts from the course readings and lectures. All
-four required reading quizzes will be posted electronically on Thursday
-at 4:00 p.m. and must be completed by 11:59 p.m.
-
+theories, ideas, and concepts from the course readings and lectures.
+\textbf{All four required reading quizzes will be posted electronically
+on Thursday at 4:00 p.m. and must be completed by 11:59 p.m. on Friday.}
 Each quiz will contain several multiple choice questions based on course
 readings and lecture material. These quizzes are designed to help you
-keep up with the course readings and lectures, and to provide you with
-the opportunity to assess your mastery of the theories we are covering
-in the course.
+absorb the course readings and lectures, and to provide you with the
+opportunity to assess your mastery of the theories we are covering in
+the course.
+
+\textbf{Important Note: Please keep in mind that your lowest quiz score
+will not be counted when computing final grades. Instead, your highest
+quiz score will be counted twice in replacement of your lowest quiz
+score. All quizzes will be posted on BlackBoard and you will be provided
+advanced notice.}
 
 \hypertarget{writing_assignments}{%
-\subsection{Four (4) Analytical Response Papers (60\% of Final
-Grade)}\label{writing_assignments}}
+\subsection{Four (4) Analytical Response Papers (60\% of Final Grade;
+15\% each)}\label{writing_assignments}}
 
 Four papers will be assigned for the semester. The required response
 papers will answer either one or two questions posed by the professor
@@ -613,20 +610,19 @@ knowledge of the course material, critical thinking skills, and writing
 skills. The papers will require you to be analytical and to reflect
 deeply on the theoretical works we will cover. Additional instructions
 about the response papers will be distributed in class during the second
-week of instruction.
-\textcolor{cyan}{Each paper must be turned in no later than 11:30 p.m. on the day that it is due.}
-Moreover, please also note that you have options for each paper
-assignment; this means that for each paper assignment you can choose to
-write between two sets of theories. Moreover, you have the opportunity
-to re-write up to \textbf{two} of your first three lower-scored
-analytical response papers for a higher grade. If you decide to rewrite
-one or two lower-scored papers, these will be due in class on
-\textbf{Tuesday, December 13, 2022 (our ``final exam'' due date) no
-later than 11:59 p.m.}
+week of instruction. \textbf{Each paper must be turned in no later than
+11:59 p.m. on the day that it is due.} Moreover, please also note that
+you have options for each paper assignment; this means that for each
+paper assignment you can choose to write between two sets of theories.
+Moreover, you have the opportunity to re-write up to \textbf{two} of
+your first three lower-scored analytical response papers for a higher
+grade. If you decide to rewrite one or two lower-scored papers, these
+will be due in class on \textbf{Tuesday, December 13, 2022 (our ``final
+exam'' due date) no later than 11:59 p.m.}
 
 \textbf{Due dates for all papers are listed below:}
 
-\renewcommand{\arraystretch}{1.15}
+\renewcommand{\arraystretch}{1.25}
 
 \begin{longtable}[]{@{}lll@{}}
 \toprule
@@ -649,18 +645,22 @@ Paper \#4 & Theories of Race and Ethnicity; \textbf{OR}, & Tuesday,
 Dec.~13 \\
 & Feminist, Queer, and Intersectionality & \\
 & Theories & \\
+& & \\
+\textbf{{[}Optional{]}} & Up to \textbf{Two} Re-Written Lower-Scored &
+Tuesday, Dec.~13 \\
+& Papers Chosen From The First Three & \\
+& Analytical Papers Written & \\
 \bottomrule
 \end{longtable}
 
 \hypertarget{guidelines-for-papers}{%
 \subsubsection{Guidelines for papers}\label{guidelines-for-papers}}
 
-Papers will have a word limit, approximately 1000 words (roughly 4
-double-spaced pages), typed, 12-point font, 1-inch margins, Times New
-Roman (11-point Arial font is also appropriate). Proper grammar and APA
-citation of sources is expected. \textbf{No other format will be
-accepted.} Late papers will be deducted 20\% of its overall grade each
-day that it is overdue.
+Papers have a word limit, approximately 1000 words (roughly 4
+double-spaced pages); must be typed with 12-point font, 1-inch margins,
+and Times New Roman font (11-point Arial font is also appropriate).
+Proper grammar and APA citation of sources is expected. \textbf{No other
+format will be accepted.}
 
 \hypertarget{tips-and-tricks-for-good-writing}{%
 \subsubsection{Tips and tricks for good
@@ -680,6 +680,23 @@ have some distance from your writing and then revise.
 
 Prompt yourself with questions that have short, concrete answers.
 
+\hypertarget{extra-credit-film-reviews-analyses-maximum-of-10-points5-points-per-analysis}{%
+\subsection{Extra-Credit (Film Reviews \& Analyses) {[}Maximum of 10
+Points/5 Points Per
+Analysis{]}}\label{extra-credit-film-reviews-analyses-maximum-of-10-points5-points-per-analysis}}
+
+Students will have the opportunity to earn extra credit in this course.
+If you would like to earn up to 10 extra points maximum toward your
+final course grade, you can write two 1-page (single-spaced) analytical
+reviews and critiques of two films. The film analyses need to provide a
+critical sociological review and analysis using one or more of the
+theories or theorists covered in the course. A list of suggested films/
+documentaries will be posted on BlackBoard by the end of the third week
+of classes along with the guidelines for this assignment. \textbf{These
+extra credit critiques should be concise and well-organized and argued;
+the film analyses can be submitted at any time during the semester, but
+no later than Tuesday December 13 by 11:59 p.m.}
+
 \hypertarget{late-work-and-student-emergencies}{%
 \subsection{Late Work and Student
 Emergencies}\label{late-work-and-student-emergencies}}
@@ -694,8 +711,8 @@ person), and provide documentation of what has occurred to justify
 making-up your work or turning it in beyond it due date. Moreover, given
 the current COVID-19 pandemic, I am aware that your situation can change
 dramatically unexpectedly.
-\textcolor{red}{If you are facing any personal, medical, financial or other challenges that impact your academic work, please inform me right away and we will work out a solution to your problem. I will do my best to accommodate your situation and allow you to complete your work at a later time if you missed a deadline.}
-\textbf{\textcolor{red}{However, the longer you wait, the less likely I am to accept a late assignment. Furthermore, I reserve the right to refuse any late work thus, keeping the lines of communication open is your best bet if you fall a little behind on an assignment.}}
+\textbf{\textcolor{red}{If you are facing any personal, medical, financial or other challenges that impact your academic work, please inform me right away and we will work out a solution to your problem. I will do my best to accommodate your situation and allow you to complete your work at a later time if you missed a deadline.}
+\textcolor{red}{However, the longer you wait, the less likely I am to accept a late assignment. Furthermore, I reserve the right to refuse any late work thus, keeping the lines of communication open is your best bet if you fall a little behind on an assignment.}}
 
 The instructor's policy regarding late work is to give any student who
 is ill or has faced a \textbf{documented medical/personal emergency} the
@@ -706,7 +723,7 @@ completing your coursework.
 \textcolor{red}{Please also note that if you foresee being absent due to a conflict with religious observance(s), you must notify the instructor of your prospective absence during the first week of classes.}
 
 If you have any questions, do not hesitate to discuss these issues with
-the instructor in person or via Black Board.
+the instructor in person or via BlackBoard.
 
 \hypertarget{getting-help-and-communicating-with-your-professor}{%
 \section{Getting Help And Communicating With Your
@@ -722,9 +739,9 @@ to get in touch and/or ask questions.
 \subsection{Communication policy}\label{communication-policy}}
 
 When contacting your about the course, please send message through
-``Message Your Professor'' in BBLearn. I check messages three times per
-day, Monday thru Friday, between 9:00 AM and 6:00 PM. Please allow up to
-24-48 hours for a response during the week. If you contact on the
+``Message Your Professor'' in BlackBoard. I check messages three times
+per day, Monday thru Friday, between 9:00 AM and 6:00 PM. Please allow
+up to 24-48 hours for a response during the week. If you contact on the
 weekend, expect a reply the following Monday.
 
 \begin{itemize}
@@ -779,6 +796,32 @@ weekend, expect a reply the following Monday.
 \textbf{I reserve the right to penalize individuals who do not
 demonstrate these basic principles in their communications.}
 
+\hypertarget{powerpoint-lecture-slides-availability}{%
+\section{Powerpoint Lecture Slides
+Availability:}\label{powerpoint-lecture-slides-availability}}
+
+Please note that course is taught in a ``synchronous manner'' which
+means that lectures will be delivered ``live''. Whether you are an
+in-person or online student, you must be present in class. \textbf{Each
+week the powerpoint lecture slides used in each class meeting will be
+posted on Beachboard (in the `Content' section') on Friday.}
+
+\hypertarget{use-of-lecture-material-powerpoint-lecture-slides-and-electronic-readings}{%
+\subsection{Use of Lecture Material, PowerPoint Lecture Slides, and
+Electronic
+Readings:}\label{use-of-lecture-material-powerpoint-lecture-slides-and-electronic-readings}}
+
+It is most important that you know that
+\textcolor{red}{\bf{all} course materials (i.e, the course syllabus, assignments, handouts, exams, etc.) are the instructor’s property. Course readings, on the other hand, are the property of their writers and editors, and together, should be used only by students enrolled in this course. These materials should not be distributed or used beyond the member of this course. If you do, this will constitute a major legal violation with serious penalties.}
+These materials are available to you to facilitate your own personal
+learning in this class. Sale of course or reproduction of course
+materials, including lecture content and information, are strictly
+prohibited. All class material, particularly lectures, cannot be further
+reproduced. Reproduction of audio or video of zoom lectures or
+powerpoint slides by students or anyone else is \textbf{\emph{strictly
+prohibited}} under any circumstances.
+\textcolor{red}{\bf{Professor Jacinto reserves the right to take academic penalty measures and/or legal action if you are found in violation of any of the expectations stated here.}}
+
 \hypertarget{creating-a-safe-and-inclusive-learning-environment}{%
 \section{Creating a Safe and Inclusive Learning
 Environment}\label{creating-a-safe-and-inclusive-learning-environment}}
@@ -799,7 +842,7 @@ may speak to someone confidentially by contacting the
 Center} (530-898-6345) or
 \href{https://www.csuchico.edu/safeplace/}{Safe Place} (530-898-3030).
 Information on campus reporting obligations and other Title IX related
-resources are available here: www.csuchico.edu/title-ix
+resources are available here: \url{https://www.csuchico.edu/title-ix/}
 
 \hypertarget{statement-of-commitment-to-diversity-equity-and-inclusion}{%
 \subsection{Statement of Commitment to Diversity, Equity, and
@@ -905,23 +948,28 @@ harassment or discrimination of any kind.
 \subsection{Mental health}\label{mental-health}}
 
 Being a university student is stressful and can negatively impact mental
-health. The Counseling Center offers free counseling services to
-regularly enrolled students at California State University, Chico. There
-are a wide variety of reasons students come to counseling:
+health. The \href{https://www.csuchico.edu/counseling/}{WildCat
+Counseling Center} offers free counseling services to regularly enrolled
+students at California State University, Chico. There are a wide variety
+of reasons students seek counseling:
 
 \begin{itemize}
 \tightlist
 \item
-  Resolving personal problems or conflicts
+  Resolving personal problems or conflicts.
 \item
-  Seeking clarification and support in making important life decisions
+  Seeking clarification and support in making important life decisions.
 \item
   Experiencing an emotional crisis due to a traumatic incident or a
-  series of incidents
+  series of incidents.
 \item
   Help in developing personal survival skills necessary to achieve
   personal goals.
 \end{itemize}
+
+Absences for mental health reasons are excused but the professor should
+be notified immediately (within 48 - 72 hours of absence) to prevent any
+penalty on your final grade.
 
 \hypertarget{other-course-policies}{%
 \section{Other Course Policies}\label{other-course-policies}}
@@ -946,34 +994,31 @@ are a wide variety of reasons students come to counseling:
     Dean's Office.}
   \end{enumerate}
 \item
-  As mentioned in the \protect\hyperlink{writing_assignments}{``Three
-  (3) Writing Assignments'' section} above, all papers must be 12-point
-  Times New Roman font (or 11-point Arial font), double-spaced, and have
-  1'' margins. Students' names are to be in the upper right hand corner
-  with the date and student ID number included; also, include page
-  numbers in the bottom right hand corner of the paper. Excessive
-  spacing beyond this identification will result in the deduction of
-  points. Finally, follow APA citation style, and give full references.
-  For help with formatting citations and bibliographies, visit the
-  ``Citing Sources'' page in Meriam Library's website:
+  As mentioned in the \protect\hyperlink{writing_assignments}{``Four (4)
+  Analytical Response Papers'' section} above, all papers must be
+  12-point Times New Roman font (or 11-point Arial font), double-spaced,
+  and have 1'' margins. Students' names are to be in the upper right
+  hand corner with the date and student ID number included; also,
+  include page numbers in the bottom right hand corner of the paper.
+  Excessive spacing beyond this identification will result in the
+  deduction of points. Finally, follow APA citation style, and give full
+  references. For help with formatting citations and bibliographies,
+  visit the ``Citing Sources'' page in Meriam Library's website:
   \url{https://libguides.csuchico.edu/cite}
 \item
   When there is evidence that a student has committed plagiary, copied
   the work of others, allowed others to copy their work, cheated on a
   quiz, altered class material or scores, or has inappropriate
   possession of quizzes, or sensitive material, the incident will be
-  investigated by Student Judicial Affairs. \textbf{The consequences for
-  academic dishonesty are severe, including receiving an ``F'' in the
-  course. No exceptions.}
+  investigated by Student Judicial Affairs.
+  \textcolor{red}{\bf{The consequences for academic dishonesty are severe, including receiving an “F” in the course. No exceptions.}}
 \item
   All written work will be assessed on content, depth, logic, and
   quality of written expression.
 \item
   Students are responsible for handling the necessary paperwork for
-  adding or dropping this class. If a student does not withdraw, and
-  does not attend class or complete required work, an ``F'' or ``WU''
-  will be reported for the final grade. Instructors may drop a student
-  who does not attend the first two classes.
+  adding or dropping this class.
+  \textcolor{red}{\bf{If a student does not withdraw, and does not attend class or complete required work, an “F” or “WU” will be reported for the final grade. Instructors may drop a student who does not attend the first two classes.}}
 \end{itemize}
 
 \hypertarget{university-policies-and-campus-resources}{%
@@ -1146,6 +1191,364 @@ lecture. \textbf{We will not meet during Fall Break (Nov.~21-25).}
 \bottomrule
 \end{tabular}
 \end{table}
+
+\hypertarget{tentative-reading-and-assignments-schedule}{%
+\subsection{Tentative Reading and Assignments
+Schedule}\label{tentative-reading-and-assignments-schedule}}
+
+Readings we will cover are listed below.
+\textcolor{red}{\bf{Note that the professor reserves the right to change the readings and assignment due dates below based on new and developing information about what would best serve my students.}}
+Changes in the syllabus will be highlighted in
+\colorbox{Cyan}{\bf{cyan.}} In the event that a reading has not been
+made available in a way that you can access it on Black Board or
+Perusall, please email me immediately so the professor may repost the
+reading/assignment in time for you to complete it before the next class
+period. You will also be immediately notified when there the due date of
+an assignment has changed.
+
+\emph{These are questions you should consider as you complete each
+reading:} What are the authors' main objectives/research questions? What
+methods, if any, did the author use to explore this question? What are
+the author's main conclusions? How do the readings build upon or
+challenge other works we have read thus far? Answering these questions
+on your own will better prepare you for quizzes, writing assignments,
+and the final project.
+
+\hypertarget{course-schedule}{%
+\section{COURSE SCHEDULE}\label{course-schedule}}
+
+\bigbreak
+
+\hypertarget{week-01-0823---0825-introduction-and-course-overview}{%
+\subsection{WEEK 01, 08/23 - 08/25: INTRODUCTION AND COURSE
+OVERVIEW}\label{week-01-0823---0825-introduction-and-course-overview}}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-02-0830---0901-structural-functionalist-theories-i}{%
+\subsection{WEEK 02, 08/30 - 09/01: STRUCTURAL FUNCTIONALIST THEORIES,
+I}\label{week-02-0830---0901-structural-functionalist-theories-i}}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Dillon M (2020). \emph{Introduction to Sociological Theory: Theorists,
+  Concepts, and their Applicabilityto the Twenty-First Century}, 3
+  edition. Wiley-Blackwell, Hoboken, NJ. ISBN 978-1-119-41091-1.
+  \textcolor{BrickRed}{\bf{[Read: Chapter 4]}}
+\item
+  Parsons T (2017). ``The school class as a social system: Some of its
+  functions in American society.'' In \emph{Exploring Education},
+  151-164. Routledge. \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\end{itemize}
+
+\textbf{Assignments Due}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-03-0906---0908-structural-functionalist-theories-ii}{%
+\subsection{WEEK 03, 09/06 - 09/08: STRUCTURAL FUNCTIONALIST THEORIES,
+II}\label{week-03-0906---0908-structural-functionalist-theories-ii}}
+
+\textbf{Required Readings}
+
+\begin{itemize}
+\item
+  Merton RK (1938). ``Social Structure and Anomie.'' \emph{American
+  Sociological Review}, \emph{3}, 672-682.
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\item
+  Davis K, Moore WE (1945). ``Some Principles of Stratification.''
+  \emph{American Sociological Review}, \emph{10}(2), 242-249.
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\end{itemize}
+
+\textbf{Assignments Due}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-04-0913---0915-symbolic-interactionism-the-work-of-erving-goffman-i}{%
+\subsection{WEEK 04, 09/13 - 09/15: SYMBOLIC INTERACTIONISM \& THE WORK
+OF ERVING GOFFMAN,
+I}\label{week-04-0913---0915-symbolic-interactionism-the-work-of-erving-goffman-i}}
+
+\textbf{Required Readings}
+
+\begin{itemize}
+\item
+  Dillon M (2020). \emph{Introduction to Sociological Theory: Theorists,
+  Concepts, and their Applicabilityto the Twenty-First Century}, 3
+  edition. Wiley-Blackwell, Hoboken, NJ. ISBN 978-1-119-41091-1.
+  \textcolor{BrickRed}{\bf{[Read: Chapter 8]}}
+\item
+  Goffman E (2018). ``Stigma And Social Identity.'' In \emph{Deviance \&
+  Liberty}, 1 edition, 24-31. Routledge. ISBN 978-0-203-79334-3, doi:
+  10.4324/9780203793343-4 (URL:
+  \url{https://doi.org/10.4324/9780203793343-4}), \textless URL:
+  \url{https://www.taylorfrancis.com/books/9781351522373/chapters/10.4324/9780203793343-4}\textgreater.
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\end{itemize}
+
+\textbf{Assignments Due}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-05-0920---0922-the-work-of-erving-goffman-ii}{%
+\subsection{WEEK 05, 09/20 - 09/22: THE WORK OF ERVING GOFFMAN,
+II}\label{week-05-0920---0922-the-work-of-erving-goffman-ii}}
+
+\textbf{Required Readings}
+
+\begin{itemize}
+\tightlist
+\item
+  Goffman E (1959). \emph{The Presentation of Self in Everyday Life}.
+  Anchor Books. ISBN 0-385-09402-7.
+  \colorbox{Goldenrod}{\bf{[E-Posting: Read: Introduction and Chapter 1 Only]}}
+\end{itemize}
+
+\textbf{Assignments Due}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  \textbf{Paper \#1 due by Sunday 11:59 p.m.}
+\item
+  \textbf{Quiz \#1 must be completed by Friday 11:59 p.m.}
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-06-0927---0929-power-elite-theories}{%
+\subsection{WEEK 06, 09/27 - 09/29: POWER ELITE
+THEORIES}\label{week-06-0927---0929-power-elite-theories}}
+
+\textbf{Required Readings}
+
+\begin{itemize}
+\item
+  Mills CW (1956). ``The Power Elite.'' In \emph{The Power Elite}, New
+  edition. Oxford University Press, New York. ISBN 0-19-513354-4.
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\item
+  Molotoch H (1976). ``The City as a Growth Machine: Toward a Political
+  Economy of Place.'' \emph{American Journal of Sociology},
+  \emph{82}(2), 309-332. \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\end{itemize}
+
+\textbf{Assignments Due}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-07-1004---1006-neo-marxism-and-critical-theories}{%
+\subsection{WEEK 07, 10/04 - 10/06: NEO-MARXISM AND CRITICAL
+THEORIES}\label{week-07-1004---1006-neo-marxism-and-critical-theories}}
+
+\textbf{Required Readings}
+
+\begin{itemize}
+\item
+  Gramsci A (1971). ``Selections From The Prison Notebooks.'' In Hoare
+  Q, Smith GN (eds.), \emph{Selections From The Prison Notebooks}, 1
+  edition. International Publishers, New York.
+
+  \colorbox{Goldenrod}{\bf{[E-Posting: Read: 238-276 only]}}
+\item
+  Horkheimer M, Adorno TW (2017). ``The Culture Industry: Enlightenment
+  as Mass Deception.'' In \emph{Karl Marx}. Routledge.
+  \colorbox{Goldenrod}{\bf{[E-Posting}}
+\end{itemize}
+
+\textbf{Assignments Due}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-08-1011---1013-post-structuralism-the-work-of-michel-foucault-i}{%
+\subsection{WEEK 08, 10/11 - 10/13 POST-STRUCTURALISM \& THE WORK OF
+MICHEL FOUCAULT,
+I}\label{week-08-1011---1013-post-structuralism-the-work-of-michel-foucault-i}}
+
+\textbf{Required Readings}
+
+\begin{itemize}
+\item
+  Dillon M (2020). \emph{Introduction to Sociological Theory: Theorists,
+  Concepts, and their Applicabilityto the Twenty-First Century}, 3
+  edition. Wiley-Blackwell, Hoboken, NJ. ISBN 978-1-119-41091-1.
+  \textcolor{BrickRed}{\bf{[Read: Chapter 11: 343-352 only]}}
+\item
+  Foucault M (1982). ``The Subject and Power.'' \emph{Critical Inquiry},
+  \emph{8}(4), 777-795. \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\end{itemize}
+
+\textbf{Assignments Due}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-09-1018---1020-the-work-of-michel-foucault-ii}{%
+\subsection{WEEK 09, 10/18 - 10/20: THE WORK OF MICHEL FOUCAULT,
+II}\label{week-09-1018---1020-the-work-of-michel-foucault-ii}}
+
+\textbf{Required Readings}
+
+\begin{itemize}
+\item
+  Foucault M (2022). ````Panopticism'' from ``Discipline \& Punish: The
+  Birth of the Prison''.'' \emph{MICHEL FOUCAULT}, 13.
+  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+\item
+  Foucault M (1978). \emph{The history of sexuality}, 1st American ed
+  edition. Pantheon Books, New York. ISBN 978-0-394-41775-2.
+  \colorbox{Goldenrod}{\bf{[E-Posting: Read: 15-73 only]}}
+\end{itemize}
+
+\textbf{Assignments Due}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  \textbf{Paper \#2 due by Sunday 11:59 p.m.}
+\item
+  \textbf{Quiz \#2 must be completed by Friday 11:59 p.m.}
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-10-1025---1027-theories-of-socialcultural-reproduction-inequality-the-work-of-pierre-bourdieu-i}{%
+\subsection{WEEK 10, 10/25 - 10/27: THEORIES OF SOCIAL/CULTURAL
+REPRODUCTION \& INEQUALITY: THE WORK OF PIERRE BOURDIEU
+I}\label{week-10-1025---1027-theories-of-socialcultural-reproduction-inequality-the-work-of-pierre-bourdieu-i}}
+
+\begin{itemize}
+\tightlist
+\item
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-11-1101---1103-the-work-of-pierre-bourdieu-ii}{%
+\subsection{WEEK 11, 11/01 - 11/03: THE WORK OF PIERRE BOURDIEU,
+II}\label{week-11-1101---1103-the-work-of-pierre-bourdieu-ii}}
+
+\begin{itemize}
+\tightlist
+\item
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-12-1108---1110-theories-of-race-ethnicity-i}{%
+\subsection{WEEK 12, 11/08 - 11/10: THEORIES OF RACE \& ETHNICITY,
+I}\label{week-12-1108---1110-theories-of-race-ethnicity-i}}
+
+\begin{itemize}
+\tightlist
+\item
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-13-1115---1117-theories-of-race-ethnicity-ii}{%
+\subsection{WEEK 13, 11/15 - 11/17: THEORIES OF RACE \& ETHNICITY,
+II}\label{week-13-1115---1117-theories-of-race-ethnicity-ii}}
+
+\begin{itemize}
+\tightlist
+\item
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-14-1122---1124-fall-break---no-classes---enjoy-your-break}{%
+\subsection{WEEK 14, 11/22 - 11/24: FALL BREAK - NO CLASSES - ENJOY YOUR
+BREAK!}\label{week-14-1122---1124-fall-break---no-classes---enjoy-your-break}}
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{No required readings or assignments due this week}
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-15-1129---1201-feminist-theories-i}{%
+\subsection{WEEK 15, 11/29 - 12/01: FEMINIST THEORIES,
+I}\label{week-15-1129---1201-feminist-theories-i}}
+
+\begin{itemize}
+\tightlist
+\item
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-16-1206---1208-feminist-theories-ii}{%
+\subsection{WEEK 16, 12/06 - 12/08: FEMINIST THEORIES,
+II}\label{week-16-1206---1208-feminist-theories-ii}}
+
+\begin{itemize}
+\tightlist
+\item
+\end{itemize}
+
+\bigbreak
+\hrule
 
 
 
