--- a/bib_main.bib
+++ b/bib_main.bib
@@ -1,9 +1,43 @@
 
-@book{dillon2010twp,
-  title     =  {Introduction to Sociological Theory: Theorists, Concepts, and their Applicability to the Twenty-First Century, 3rd Edition},
-  author    =  {Dillon, Michele},
-  year      =  {2010},
-  publisher =  {{Wiley \& Sons Ltd}},
-  address   =  {{Hoboken, NJ}},
-  isbn      =  {978-1119410911},
+@book{dillon_introduction_2020,
+	address = {Hoboken, NJ},
+	edition = {3},
+	title = {Introduction to {Sociological} {Theory}: {Theorists}, {Concepts}, and their {Applicabilityto} the {Twenty}-{First} {Century}},
+	isbn = {978-1-119-41091-1},
+	publisher = {Wiley-Blackwell},
+	author = {Dillon, Michelle},
+	year = {2020},
+}
+
+@article{durkheim_what_nodate,
+	title = {What {Makes} {Sociology} {Different}?},
+	language = {en},
+	author = {Durkheim, Emile},
+	pages = {3--12},
+	file = {durkheim,e_sociology_different.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 301 - Contemporary Social Theory/readings/durkheim,e_sociology_different.pdf:application/pdf},
+}
+
+@article{mills_sociological_nodate,
+	title = {The {Sociological} {I} magination},
+	language = {en},
+	author = {Mills, C Wright},
+	pages = {13--18},
+	file = {mills,c_sociological_imagination.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 301 - Contemporary Social Theory/readings/mills,c_sociological_imagination.pdf:application/pdf},
+}
+
+@article{berger_sociology_nodate,
+	title = {Sociology as an {Individual} {Pastime} rport {Invitation} lo {Sociology}},
+	language = {en},
+	author = {Berger, Peter L},
+	pages = {10},
+	file = {berger,p_sociology_as_pastime.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 301 - Contemporary Social Theory/readings/berger,p_sociology_as_pastime.pdf:application/pdf},
+}
+
+@incollection{parsons_school_2017,
+	title = {The school class as a social system: {Some} of its functions in {American} society},
+	booktitle = {Exploring {Education}},
+	publisher = {Routledge},
+	author = {Parsons, Talcott},
+	year = {2017},
+	pages = {151--164},
 }
